--- a/package.json
+++ b/package.json
@@ -1,13 +1,34 @@
 {
   "name": "aws-sls-upload-s3",
   "version": "1.0.0",
-  "description": "Serverless aws-nodejs-typescript template",
-  "main": "serverless.ts",
+  "description": "Serverless",
+  "main": "index.ts",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "test:local": "IS_LOCAL=true jest",
+    "build": "serverless package",
+    "deploy": "serverless deploy",
+    "deploy:dev": "serverless deploy --stage dev",
+    "deploy:prod": "serverless deploy --stage prod",
+    "deploy:local": "IS_LOCAL=true serverless deploy --stage local",
+    "lint": "eslint . --ext .ts,.js",
+    "lint:fix": "eslint . --ext .ts,.js --fix",
+    "lint:tsc": "tsc --noEmit",
+    "validate": "npm run lint && npm run lint:tsc && npm run test",
+    "docker:up": "docker compose --env-file .env.local up -d",
+    "docker:down": "docker compose --env-file .env.local down",
+    "docker:logs": "docker compose --env-file .env.local logs -f",
+    "docker:restart": "npm run docker:down && npm run docker:up",
+    "localstack:setup": "npm run docker:up && sleep 10 && npm run localstack:create-bucket",
+    "localstack:create-bucket": "aws --endpoint-url=http://localhost:4566 s3 mb s3://upload-s3-bucket-local || true",
+    "localstack:list-buckets": "aws --endpoint-url=http://localhost:4566 s3 ls",
+    "localstack:status": "curl -s http://localhost:4566/health | jq",
+    "dev:start": "npm run localstack:setup && npm run deploy:local",
+    "dev:stop": "npm run docker:down"
   },
   "engines": {
-    "node": ">=14.15.0"
+    "node": ">=20.0.0"
   },
   "dependencies": {
     "@middy/core": "^6.1.6",
@@ -20,18 +41,22 @@
     "ts-jest": "^29.3.1"
   },
   "devDependencies": {
-    "@serverless/typescript": "^4.11.1",
+    "@serverless/typescript": "^4.18.2",
     "@types/aws-lambda": "^8.10.148",
     "@types/node": "^22.14.0",
+    "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@typescript-eslint/parser": "^8.45.0",
     "esbuild": "^0.25.2",
+    "eslint": "^8.57.1",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-node": "^11.1.0",
     "jest": "^29.7.0",
     "json-schema-to-ts": "^3.1.1",
-    "serverless": "^4.11.1",
+    "serverless": "^4.20.2",
     "serverless-esbuild": "^1.55.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.2"
-  },
-  "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
-  "license": "MIT"
+  }
 }
