--- a/serverless.yml
+++ b/serverless.yml
@@ -1,9 +1,9 @@
 service: aws-sls-upload-s3
-frameworkVersion: '3'
+frameworkVersion: '4'
 
 provider:
   name: aws
-  runtime: nodejs18.x
+  runtime: nodejs20.x
   region: us-east-1
   memorySize: 128
   timeout: 10
@@ -18,20 +18,17 @@ provider:
           Resource: "arn:aws:s3:::your-bucket-name/*"
 
 functions:
-  upload:
-    handler: handler.upload
-    events:
-      - httpApi:
-          path: /upload
-          method: post
+  index:
+    handler: src/functions/index.handler
+  uploadS3:
+    handler: src/functions/uploadS3.handler
+  getImage:
+    handler: src/functions/getImage.handler
 
-plugins:
-  - serverless-esbuild
-
-custom:
+build:
   esbuild:
     bundle: true
-    target: node18
+    target: node20
     platform: node
     sourcemap: true
     exclude: ['aws-sdk']
