--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     
     - name: Install dependencies
-      run: npm ci
+      run: npm run install
     
     - name: Run ESLint
       run: npm run lint
@@ -59,13 +59,13 @@ jobs:
         node-version: '20.x'
     
     - name: Install dependencies
-      run: npm ci
+      run: npm run install
     
     - name: Build package
       run: npm run build
     
     - name: Upload build artifacts
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifac
       with:
         name: serverless-package
         path: .serverless/
