--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
     
     - name: Install dependencies
-      run: npm run install
-    
+      run: npm install
+
     - name: Run ESLint
       run: npm run lint
     
@@ -59,13 +59,13 @@ jobs:
         node-version: '20.x'
     
     - name: Install dependencies
-      run: npm run install
-    
+      run: npm install
+
     - name: Build package
       run: npm run build
     
     - name: Upload build artifacts
-      uses: actions/upload-artifac
+      uses: actions/upload-artifact@v4
       with:
         name: serverless-package
         path: .serverless/
