fix: resolve Serverless Framework v4 authentication issue in CI
- Replace serverless package with TypeScript compilation in CI build job
- Add new build:ci script that uses npx tsc --noEmit
- Remove Serverless authentication dependency for GitHub Actions
- CI now works without Serverless Framework login requirement
- Keep full serverless functionality for local development

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test:coverage": "jest --coverage",
     "test:local": "IS_LOCAL=true jest",
     "build": "serverless package",
+    "build:ci": "npx tsc --noEmit && echo '✅ TypeScript compilation successful'",
     "deploy": "serverless deploy",
     "deploy:dev": "serverless deploy --stage dev",
     "deploy:prod": "serverless deploy --stage prod",
