--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,12 +61,5 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Build package
-      run: npm run build
-    
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: serverless-package
-        path: .serverless/
-        retention-days: 7
+    - name: Build and validate TypeScript
+      run: npm run build:ci
