--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     
     - name: Install dependencies
-      run: npm install
+      run: npm ci
 
     - name: Run ESLint
       run: npm run lint
@@ -59,7 +59,7 @@ jobs:
         node-version: '20.x'
     
     - name: Install dependencies
-      run: npm install
+      run: npm ci
 
     - name: Build and validate TypeScript
       run: npm run build:ci
